<resources>
    <string name="app_name">FITNESSDIAL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FITNESSDIAL</string>
    <string name="nav_header_subtitle">FITNESSDIAL@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">User Profile</string>
    <string name="menu_gallery">About Us</string>
    <string name="menu_slideshow">Feedback</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workoutTop">Workouts</string>
    <string name="Workbtn1">"Beginner Workout "</string>
    <string name="WorkoutsTop">Workouts</string>
    <string name="workbtn1">"Beginner Workouts  "</string>
    <string name="workbtn2">Abs Workouts</string>
    <string name="workbtn3">Push Ups Workouts</string>
    <string name="workbtn4">Plank Workouts</string>
    <string name="workbtn5">Squat Workouts</string>


    <string name="dashTop">dashboard</string>
    <string name="dashbtn2">Workout</string>
    <string name="dashbtn3">Diet Plan</string>
    <string name="dashbtn5">Water Intake</string>
    <string name="dashbtn6">Calculation</string>
    <string name="workbtn6">6 Pack Workout</string>

    <string name="workmenbtn1">Workout </string>
    <string name="workoutmen2">Day 1 (5 workouts/80 Reps)</string>
    <string name="workmenu3">Day 2 (5 workouts/80 Reps)</string>
    <string name="workmenubtn4">Day 3 (5 workouts/80 Reps)</string>
    <string name="workmenubtn5">Day 4 (5 workouts/80 Reps)</string>
    <string name="workmenubtn6">Day 5 (5 workouts/80 Reps)</string>
    <string name="workmenubtn7">Day 6 (5 workouts/ 80 Reps)</string>
    <string name="startworkbtn">start workouts</string>

    <string name="biginbtn1">beginner workouts</string>
    <string name="beginbtn2">workout Plan : Day 1</string>
    <string name="binbtn3">squats x 20</string>
    <string name="biginbtn4">Plank 25 seconds</string>
    <string name="beginbtn5">reverse crunches x 10</string>
    <string name="beginbtn6">lunges x 15</string>
    <string name="bginbtn7">push ups x 10</string>
    <string name="beginbtn8">start</string>


    <string name="timeview1">
             Squats
            (10 Reps)

    </string>
    <string name="timeview2">00 : 00 (Time Count)</string>
    <string name="timedes">Description ( How to do the workout)</string>
    <string name="timehintbtn">One More Thing</string>
    <string name="timebtn" />


</resources>