<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Workout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="8dp"
            android:background="#187bcd"
            android:text="@string/WorkoutsTop"
            android:drawableStart="@drawable/ic_download_workouts"
            android:textColor="#ffffff"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/workbtn1"
            android:drawableStart="@drawable/ic_bigin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/workbtn2"
            android:drawableStart="@drawable/ic_download_abs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button13"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/workbtn3"
            android:drawableStart="@drawable/ic_download_push"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/workbtn4"
            android:drawableStart="@drawable/ic_download_plank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/workbtn5"
            android:drawableStart="@drawable/squat4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableStart="@drawable/ic_weight_1"
            android:text="@string/workbtn6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>
</FrameLayout>