<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".workouttime">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:a
        android:background="#187bcd"
        android:text="@string/timeview1"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="@string/timeview2"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="22dp"
        android:text="@string/timedes"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="@+id/button25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button25"
        android:layout_width="396dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="18dp"
        android:drawableStart="@drawable/ic_communication_message"
        android:text="@string/timehintbtn"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="0dp"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="50dp"

        android:src="@drawable/squat4"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toEndOf="@+id/button25"
        app:layout_constraintStart_toStartOf="@+id/button29"
        app:layout_constraintTop_toBottomOf="@+id/button25"
        android:contentDescription="@string/timebtn" />

    <Button
        android:id="@+id/button29"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#187bcd"
        android:drawableStart="@drawable/ic_action_highlight_remove"
        android:drawableEnd="@drawable/ic_action_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

</androidx.constraintlayout.widget.ConstraintLayout>